--- a/webapp/WEB-INF/templates/generators/default/business/gt_business_test.html
+++ b/webapp/WEB-INF/templates/generators/default/business/gt_business_test.html
@@ -121,7 +121,7 @@ public class ${business_class.businessClass}BusinessTest extends LuteceTestCase
         </#list>
 
         // List test
-        ${business_class.businessClass}Home.get${business_class.businessClass}sList( );
+        ${business_class.businessClass}Home.get${business_class.pluralBusinessClass}List( );
 
         // Delete test
         ${business_class.businessClass}Home.remove( ${business_class.instanceName}.getId( ) );
