--- a/webapp/WEB-INF/templates/generators/default/html/gt_html_admin.html
+++ b/webapp/WEB-INF/templates/generators/default/html/gt_html_admin.html
@@ -14,7 +14,7 @@
 <${macro}box>
 	<${macro}boxHeader title='${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.title${i18n_close}' />
 	<${macro}boxBody>
-    <${macro}tform name='${business_class.businessClass?lower_case}' action='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp' <#if hasFile?? && hasFile>enctype="multipart/form-data"</#if>>
+    <${macro}tform name='${business_class.businessClass?lower_case}' action='jsp/admin/plugins/${pluginPath}/Manage${business_class.pluralBusinessClass}.jsp' <#if hasFile?? && hasFile>enctype="multipart/form-data"</#if>>
 
         <${macro}messages errors=errors />
         <${macro}input type="hidden" id="id" name="id"/>
@@ -50,7 +50,7 @@
 <${macro}box>
 	<${macro}boxHeader title='${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.title${i18n_close}' />
 	<${macro}boxBody>
-    <${macro}tform class="form-horizontal" method="post" name="${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp" <#if hasFile?? && hasFile>enctype="multipart/form-data"</#if>>
+    <${macro}tform class="form-horizontal" method="post" name="${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${pluginPath}/Manage${business_class.pluralBusinessClass}.jsp" <#if hasFile?? && hasFile>enctype="multipart/form-data"</#if>>
 			<${macro}messages errors=errors />
 			<${macro}input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
 			<${macro}input type="hidden" value="${bra_open}token${bra_close}" name="token" />
@@ -83,9 +83,9 @@
 </#if>
 
 <${macro}box>
-	<${macro}boxHeader title='${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.title${i18n_close}' boxTools=true>
-		<${macro}tform class='form-inline pull-right' name='manage_${business_class.businessClass?lower_case}' action='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp'>
-			<${macro}button type='submit' name='view_create${business_class.businessClass}' buttonIcon='plus' title='${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.buttonAdd${i18n_close}' />
+	<${macro}boxHeader title='${i18n_open}${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.title${i18n_close}' boxTools=true>
+		<${macro}tform class='form-inline pull-right' name='manage_${business_class.businessClass?lower_case}' action='jsp/admin/plugins/${pluginPath}/Manage${business_class.pluralBusinessClass}.jsp'>
+			<${macro}button type='submit' name='view_create${business_class.businessClass}' buttonIcon='plus' title='${i18n_open}${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.buttonAdd${i18n_close}' />
 		</${macro}tform>
 	</${macro}boxHeader>
 	<${macro}boxBody>    
@@ -94,19 +94,19 @@
     <div class="clearfix"></div>
     
     <${macro}offcanvas id='search_${business_class.businessClass?lower_case}' title='#i18n{portal.users.manage_users.search_users.buttonSearch}' position='end' btnTitle='#i18n{portal.users.manage_users.search_users.buttonSearch}' btnIcon='search me-1'>
-    <${macro}tform id='${business_class.businessClass?lower_case}_search_form' name='${business_class.businessClass?lower_case}_search_form' class='border-bottom pb-3' method='get' action='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp' >
+    <${macro}tform id='${business_class.businessClass?lower_case}_search_form' name='${business_class.businessClass?lower_case}_search_form' class='border-bottom pb-3' method='get' action='jsp/admin/plugins/${pluginPath}/Manage${business_class.pluralBusinessClass}.jsp' >
 		<${macro}messages errors=errors />
     		
     		<#assign count_tab_index = 1>
     		<#list business_class.attributes as attribute>
     			<#if attribute.type == "Date" || attribute.type == "int" || attribute.type == "String">
-	    			<${macro}formGroup labelFor='filter_${attribute.paramName}' labelKey='${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}'>
+	    			<${macro}formGroup labelFor='filter_${attribute.paramName}' labelKey='${i18n_open}${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.column${attribute.name}${i18n_close}'>
 						<#if attribute.type == "Date">
-	          				<${macro}input type='date' id='filter_${attribute.paramName}' name='filter_${attribute.paramName}' placeHolder='${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}' tabIndex='${count_tab_index}' />
+	          				<${macro}input type='date' id='filter_${attribute.paramName}' name='filter_${attribute.paramName}' placeHolder='${i18n_open}${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.column${attribute.name}${i18n_close}' tabIndex='${count_tab_index}' />
 				    	<#elseif attribute.type == "int">
-				    		<${macro}input type='number' id='filter_${attribute.paramName}' name='filter_${attribute.paramName}' placeHolder='${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}' value=mapFilterCriteria["${attribute.paramName}"]!'' tabIndex='${count_tab_index}' />
+				    		<${macro}input type='number' id='filter_${attribute.paramName}' name='filter_${attribute.paramName}' placeHolder='${i18n_open}${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.column${attribute.name}${i18n_close}' value=mapFilterCriteria["${attribute.paramName}"]!'' tabIndex='${count_tab_index}' />
 	    				<#elseif attribute.type == "String">
-				    		<${macro}input type='text' id='filter_${attribute.paramName}' name='filter_${attribute.paramName}' <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if>  placeHolder='${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}' value=mapFilterCriteria["${attribute.paramName}"]!'' tabIndex='${count_tab_index}' />
+				    		<${macro}input type='text' id='filter_${attribute.paramName}' name='filter_${attribute.paramName}' <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if>  placeHolder='${i18n_open}${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.column${attribute.name}${i18n_close}' value=mapFilterCriteria["${attribute.paramName}"]!'' tabIndex='${count_tab_index}' />
 				    	</#if>
 				    </${macro}formGroup>
 		    	<#assign count_tab_index = count_tab_index + 1>
@@ -115,7 +115,7 @@
 			<#list business_class.attributes as attribute>
 				<#if attribute.type == "boolean">	
 					<${macro}formGroup labelFor='filter_${attribute.paramName}' >										
-						<${macro}checkBox id='filter_${attribute.paramName}' name='filter_${attribute.paramName}' value='1' labelKey='${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}' tabIndex='${count_tab_index}' />
+						<${macro}checkBox id='filter_${attribute.paramName}' name='filter_${attribute.paramName}' value='1' labelKey='${i18n_open}${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.column${attribute.name}${i18n_close}' tabIndex='${count_tab_index}' />
 			    	</${macro}formGroup>
 			    <#assign count_tab_index = count_tab_index + 1>
 			    </#if>
@@ -129,7 +129,7 @@
     <${variable}list mapFilterCriteria?keys as key> 
     	<${variable}if mapFilterCriteria[key]!="">
 	    	<span class="badge bg-primary px-2" > 
-	 			${bra_open}key${bra_close} <a href='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp?clean_filter=1<${variable}list mapFilterCriteria?keys as x><${variable}if "${bra_open}x${bra_close}"!="${bra_open}key${bra_close}">&filter_${bra_open}x${bra_close}=${bra_open}mapFilterCriteria["${bra_open}x${bra_close}"]${bra_close} </${variable}if></${variable}list>' class='icon-block'><i class='fas fa-times-circle' style="color:white" ></i></a>
+	 			${bra_open}key${bra_close} <a href='jsp/admin/plugins/${pluginPath}/Manage${business_class.pluralBusinessClass}.jsp?clean_filter=1<${variable}list mapFilterCriteria?keys as x><${variable}if "${bra_open}x${bra_close}"!="${bra_open}key${bra_close}">&filter_${bra_open}x${bra_close}=${bra_open}mapFilterCriteria["${bra_open}x${bra_close}"]${bra_close} </${variable}if></${variable}list>' class='icon-block'><i class='fas fa-times-circle' style="color:white" ></i></a>
 			</span>
 		</${variable}if> 
 	</${variable}list>
@@ -139,7 +139,7 @@
     <${macro}table>
         <tr>
             <#list business_class.attributes as attribute>
-             <th>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}&nbsp;<a href='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp?orderBy=${attribute.paramName}'><i class='fas fa-sort'></i></a></th>
+             <th>${i18n_open}${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.column${attribute.name}${i18n_close}&nbsp;<a href='jsp/admin/plugins/${pluginPath}/Manage${business_class.pluralBusinessClass}.jsp?orderBy=${attribute.paramName}'><i class='fas fa-sort'></i></a></th>
             </#list>
             <th>${i18n_open}portal.util.labelActions${i18n_close}</th>
         </tr>
@@ -158,9 +158,9 @@
 			</td>
         	</#list>
         	<td>
-				<${macro}aButton href='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp?view=modify${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}' title='${i18n_open}portal.util.labelModify${i18n_close}' hideTitle=['all'] buttonIcon='pencil' />
+				<${macro}aButton href='jsp/admin/plugins/${pluginPath}/Manage${business_class.pluralBusinessClass}.jsp?view=modify${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}' title='${i18n_open}portal.util.labelModify${i18n_close}' hideTitle=['all'] buttonIcon='pencil' />
 						
-				<${macro}aButton href='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp?action=confirmRemove${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}' title='${i18n_open}portal.util.labelDelete${i18n_close}' buttonIcon='trash' hideTitle=['all'] color='btn-danger'  />
+				<${macro}aButton href='jsp/admin/plugins/${pluginPath}/Manage${business_class.pluralBusinessClass}.jsp?action=confirmRemove${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}' title='${i18n_open}portal.util.labelDelete${i18n_close}' buttonIcon='trash' hideTitle=['all'] color='btn-danger'  />
 
 	        </td>
         </tr>
