--- a/webapp/WEB-INF/templates/generators/default/html/gt_html_xpage_tabs.html
+++ b/webapp/WEB-INF/templates/generators/default/html/gt_html_xpage_tabs.html
@@ -4,7 +4,7 @@
 		<#if business_classes?? >
 				<#list business_classes?sort_by('businessClass') as business_class>
 					<${macro}tabLink active=(tab=="${business_class.businessClass?lower_case}")
-						title="${i18n_open}${plugin_name?lower_case}.manage_${business_class.businessClass?lower_case}s.pageTitle${i18n_close}"
+						title="${i18n_open}${plugin_name?lower_case}.manage_${business_class.pluralBusinessClass?lower_case}.pageTitle${i18n_close}"
 				        href="jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}"
 				    />
 				</#list>
