--- a/webapp/WEB-INF/templates/generators/default/xpage/gt_xpage.html
+++ b/webapp/WEB-INF/templates/generators/default/xpage/gt_xpage.html
@@ -86,7 +86,7 @@ import fr.paris.lutece.portal.business.file.File;
 public class ${business_class.businessClass}XPage extends MVCApplication
 {
     // Templates
-    private static final String TEMPLATE_MANAGE_${business_class.businessClass?upper_case}S = "/skin/plugins/${radicalPackage?replace(".","/")}/manage_${business_class.businessClass?lower_case}s.html";
+    private static final String TEMPLATE_MANAGE_${business_class.pluralBusinessClass?upper_case} = "/skin/plugins/${radicalPackage?replace(".","/")}/manage_${business_class.pluralBusinessClass?lower_case}.html";
     private static final String TEMPLATE_CREATE_${business_class.businessClass?upper_case} = "/skin/plugins/${radicalPackage?replace(".","/")}/create_${business_class.businessClass?lower_case}.html";
     private static final String TEMPLATE_MODIFY_${business_class.businessClass?upper_case} = "/skin/plugins/${radicalPackage?replace(".","/")}/modify_${business_class.businessClass?lower_case}.html";
     
@@ -101,7 +101,7 @@ public class ${business_class.businessClass}XPage extends MVCApplication
     private static final String MESSAGE_CONFIRM_REMOVE_${business_class.businessClass?upper_case} = "${msg}.message.confirmRemove${business_class.businessClass?cap_first}";
     
     // Views
-    private static final String VIEW_MANAGE_${business_class.businessClass?upper_case}S = "manage${business_class.businessClass}s";
+    private static final String VIEW_MANAGE_${business_class.pluralBusinessClass?upper_case} = "manage${business_class.pluralBusinessClass}";
     private static final String VIEW_CREATE_${business_class.businessClass?upper_case} = "create${business_class.businessClass}";
     private static final String VIEW_MODIFY_${business_class.businessClass?upper_case} = "modify${business_class.businessClass}";
 
@@ -123,17 +123,17 @@ public class ${business_class.businessClass}XPage extends MVCApplication
     private ${business_class.businessClass?cap_first} _${business_class.businessClass?lower_case};
     
     /**
-     * return the form to manage ${business_class.businessClass?lower_case}s
+     * return the form to manage ${business_class.pluralBusinessClass?lower_case}
      * @param request The Http request
-     * @return the html code of the list of ${business_class.businessClass?lower_case}s
+     * @return the html code of the list of ${business_class.pluralBusinessClass?lower_case}
      */
-    @View( value = VIEW_MANAGE_${business_class.businessClass?upper_case}S, defaultView = true )
-    public XPage getManage${business_class.businessClass}s( HttpServletRequest request )
+    @View( value = VIEW_MANAGE_${business_class.pluralBusinessClass?upper_case}, defaultView = true )
+    public XPage getManage${business_class.pluralBusinessClass}( HttpServletRequest request )
     {
         _${business_class.businessClass?lower_case} = null;
-        List<${business_class.businessClass}> list${business_class.businessClass}s = ${business_class.businessClass}Home.get${business_class.businessClass}sList(  );
+        List<${business_class.businessClass}> list${business_class.pluralBusinessClass} = ${business_class.businessClass}Home.get${business_class.pluralBusinessClass}List(  );
         <#if hasFile?? && hasFile>
-        for (${business_class.businessClass} fil : list${business_class.businessClass}s)
+        for (${business_class.businessClass} fil : list${business_class.pluralBusinessClass})
         {
         	IFileStoreServiceProvider fileStoreService = ${business_class.businessClass}Home.getFileStoreServiceProvider( );
         	<#list business_class.attributes as attribute>
@@ -162,9 +162,9 @@ public class ${business_class.businessClass}XPage extends MVCApplication
         </#if>
         
         Map<String, Object> model = getModel(  );
-        model.put( MARK_${business_class.businessClass?upper_case}_LIST, list${business_class.businessClass}s );
+        model.put( MARK_${business_class.businessClass?upper_case}_LIST, list${business_class.pluralBusinessClass} );
         
-        return getXPage( TEMPLATE_MANAGE_${business_class.businessClass?upper_case}S, getLocale( request ), model );
+        return getXPage( TEMPLATE_MANAGE_${business_class.pluralBusinessClass?upper_case}, getLocale( request ), model );
     }
 
     /**
@@ -237,7 +237,7 @@ public class ${business_class.businessClass}XPage extends MVCApplication
         ${business_class.businessClass}Home.create( _${business_class.businessClass?lower_case} );
         addInfo( INFO_${business_class.businessClass?upper_case}_CREATED, getLocale( request ) );
 
-        return redirectView( request, VIEW_MANAGE_${business_class.businessClass?upper_case}S );
+        return redirectView( request, VIEW_MANAGE_${business_class.pluralBusinessClass?upper_case} );
     }
 
     /**
@@ -264,7 +264,7 @@ public class ${business_class.businessClass}XPage extends MVCApplication
      * Handles the removal form of a ${business_class.businessClass?lower_case}
      *
      * @param request The Http request
-     * @return the jsp URL to display the form to manage ${business_class.businessClass?lower_case}s
+     * @return the jsp URL to display the form to manage ${business_class.pluralBusinessClass?lower_case}
      */
     @Action( ACTION_REMOVE_${business_class.businessClass?upper_case} )
     public XPage doRemove${business_class.businessClass?cap_first}( HttpServletRequest request )
@@ -297,7 +297,7 @@ public class ${business_class.businessClass}XPage extends MVCApplication
         ${business_class.businessClass}Home.remove( nId );
         addInfo( INFO_${business_class.businessClass?upper_case}_REMOVED, getLocale( request ) );
 
-        return redirectView( request, VIEW_MANAGE_${business_class.businessClass?upper_case}S );
+        return redirectView( request, VIEW_MANAGE_${business_class.pluralBusinessClass?upper_case} );
     }
 
     /**
@@ -404,7 +404,7 @@ public class ${business_class.businessClass}XPage extends MVCApplication
         ${business_class.businessClass}Home.update( _${business_class.businessClass?lower_case} );
         addInfo( INFO_${business_class.businessClass?upper_case}_UPDATED, getLocale( request ) );
 
-        return redirectView( request, VIEW_MANAGE_${business_class.businessClass?upper_case}S );
+        return redirectView( request, VIEW_MANAGE_${business_class.pluralBusinessClass?upper_case} );
     }
 }
 <#else>
