--- a/webapp/WEB-INF/templates/generators/default/xpage/gt_xpage_test.html
+++ b/webapp/WEB-INF/templates/generators/default/xpage/gt_xpage_test.html
@@ -172,7 +172,7 @@ public void testXPage(  ) throws AccessDeniedException, IOException
 		
 		
 		//modify ${business_class.businessClass}	
-		List<Integer> listIds = ${business_class.businessClass}Home.getId${business_class.businessClass}sList(); 
+		List<Integer> listIds = ${business_class.businessClass}Home.getId${business_class.pluralBusinessClass}List(); 
 
 		assertTrue( !listIds.isEmpty( ) );
 
