--- a/webapp/WEB-INF/templates/generators/default/business/gt_business_dao_v5.html
+++ b/webapp/WEB-INF/templates/generators/default/business/gt_business_dao_v5.html
@@ -140,7 +140,7 @@ public final class ${business_class.businessClass}DAO implements I${business_cla
      * {@inheritDoc }
      */
     @Override
-    public List&lt;${business_class.businessClass}&gt; select${business_class.businessClass}sList( Plugin plugin )
+    public List&lt;${business_class.businessClass}&gt; select${business_class.pluralBusinessClass}List( Plugin plugin )
     {
         List&lt;${business_class.businessClass}&gt; ${business_class.instanceName}List = new ArrayList&lt;&gt;(  );
         DAOUtil daoUtil = new DAOUtil( SQL_QUERY_SELECTALL, plugin );
@@ -171,7 +171,7 @@ public final class ${business_class.businessClass}DAO implements I${business_cla
      * {@inheritDoc }
      */
     @Override
-    public List&lt;Integer&gt; selectId${business_class.businessClass}sList( Plugin plugin )
+    public List&lt;Integer&gt; selectId${business_class.pluralBusinessClass}List( Plugin plugin )
     {
         List&lt;Integer&gt; ${business_class.instanceName}List = new ArrayList&lt;&gt;( );
         try( DAOUtil daoUtil = new DAOUtil( SQL_QUERY_SELECTALL_ID, plugin ) )
@@ -192,7 +192,7 @@ public final class ${business_class.businessClass}DAO implements I${business_cla
      * {@inheritDoc }
      */
     @Override
-    public ReferenceList select${business_class.businessClass}sReferenceList( Plugin plugin )
+    public ReferenceList select${business_class.pluralBusinessClass}ReferenceList( Plugin plugin )
     {
         ReferenceList ${business_class.instanceName}List = new ReferenceList();
         DAOUtil daoUtil = new DAOUtil( SQL_QUERY_SELECTALL, plugin );
