--- a/webapp/WEB-INF/templates/generators/default/html/gt_html_admin_tabs.html
+++ b/webapp/WEB-INF/templates/generators/default/html/gt_html_admin_tabs.html
@@ -4,8 +4,8 @@
 		<#if business_classes?? >
 			<#list business_classes?sort_by('businessClass') as business_class>	
 				<${macro}tabLink active=(tab=="${business_class.businessClass?lower_case}")
-					title="${i18n_open}${plugin_name?lower_case}.manage_${business_class.businessClass?lower_case}s.pageTitle${i18n_close}"
-			    	href="jsp/admin/plugins/${pluginPath?lower_case}/Manage${business_class.businessClass?cap_first}s.jsp" />
+					title="${i18n_open}${plugin_name?lower_case}.manage_${business_class.pluralBusinessClass?lower_case}.pageTitle${i18n_close}"
+			    	href="jsp/admin/plugins/${pluginPath?lower_case}/Manage${business_class.pluralBusinessClass?cap_first}.jsp" />
 			</#list>
 		</#if>
 	</${macro}tabList>
