--- a/webapp/WEB-INF/templates/generators/default/html/gt_html_admin_v5.html
+++ b/webapp/WEB-INF/templates/generators/default/html/gt_html_admin_v5.html
@@ -5,7 +5,7 @@
 <${macro}tabs tab="${business_class.businessClass?lower_case}" />
 
 <${macro}rowBoxHeader i18nTitleKey="${plugin_name}.create_${business_class.businessClass?lower_case}.title">
-    <form class="form-horizontal" method="post" name="create_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
+    <form class="form-horizontal" method="post" name="create_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.pluralBusinessClass}.jsp">
         <${macro}messages errors=errors />
         <input type="hidden" id="id" name="id"/>
         <input type="hidden" value="${bra_open}token${bra_close}" name="token" />
@@ -13,7 +13,7 @@
         <#list business_class.attributes as attribute>
         <${macro}fieldInputText i18nLabelKey="${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}" inputName="${attribute.paramName}" <#if attribute.notNull>mandatory=true</#if> value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!''${bra_close}" i18nHelpBlockKey="${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help" />
         </#list>
-        <${macro}actionButtons button1Name="action_create${business_class.businessClass}" button2Name="view_manage${business_class.businessClass}s"/>
+        <${macro}actionButtons button1Name="action_create${business_class.businessClass}" button2Name="view_manage${business_class.pluralBusinessClass}"/>
     </form>
 </${macro}rowBoxHeader>
 </#if>
@@ -24,7 +24,7 @@
 <${macro}tabs tab="${business_class.businessClass?lower_case}" />
 
 <${macro}rowBoxHeader i18nTitleKey="${plugin_name}.modify_${business_class.businessClass?lower_case}.title">
-    <form class="form-horizontal" method="post" name="modify_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
+    <form class="form-horizontal" method="post" name="modify_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.pluralBusinessClass}.jsp">
         <${macro}messages errors=errors />
         <input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
         <input type="hidden" value="${bra_open}token${bra_close}" name="token" />
@@ -32,7 +32,7 @@
         <#list business_class.attributes as attribute>
         <${macro}fieldInputText i18nLabelKey="${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}" inputName="${attribute.paramName}" <#if attribute.notNull>mandatory=true</#if> value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}" i18nHelpBlockKey="${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}.help" />
         </#list>
-        <${macro}actionButtons button1Name="action_modify${business_class.businessClass}" button2Name="view_manage${business_class.businessClass}s"/>
+        <${macro}actionButtons button1Name="action_modify${business_class.businessClass}" button2Name="view_manage${business_class.pluralBusinessClass}"/>
     </form>
 </${macro}rowBoxHeader>
 </#if>
@@ -43,13 +43,13 @@
 <${macro}tabs tab="${business_class.businessClass?lower_case}" />
 
 <${macro}rowBox>
-    <${macro}boxHeader i18nTitleKey="${plugin_name}.manage_${business_class.businessClass?lower_case}s.title">
+    <${macro}boxHeader i18nTitleKey="${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.title">
         <${macro}headerButtons>
 
 
-        <form class="form-inline pull-right" method="post" name="manage_${business_class.businessClass?lower_case}s" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
+        <form class="form-inline pull-right" method="post" name="manage_${business_class.pluralBusinessClass?lower_case}" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.pluralBusinessClass}.jsp">
             <!-- Add pull-right to class1 -->
-            <${macro}actionButtons button1Name="view_create${business_class.businessClass}" icon1="icon-plus icon-white" i18nValue1Key="${plugin_name}.manage_${business_class.businessClass?lower_case}s.buttonAdd" />
+            <${macro}actionButtons button1Name="view_create${business_class.businessClass}" icon1="icon-plus icon-white" i18nValue1Key="${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.buttonAdd" />
         </form>
 
     </${macro}headerButtons>
@@ -62,7 +62,7 @@
         <tr>
             <input type="hidden" id="id" name="id"/>
             <#list business_class.attributes as attribute>
-            <th>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}</th>
+            <th>${i18n_open}${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.column${attribute.name}${i18n_close}</th>
             </#list>
             <th>${i18n_open}portal.util.labelActions${i18n_close}</th>
         </tr>
@@ -76,12 +76,12 @@
             </td>
         </#list>
         <td>
-            <a href="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp?view=modify${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
+            <a href="jsp/admin/plugins/${plugin_name}/Manage${business_class.pluralBusinessClass}.jsp?view=modify${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
                class="btn btn-primary btn-sm" title="${i18n_open}portal.util.labelModify${i18n_close}">
                 <i class="fa fa-pencil"></i>
             </a>
 
-            <a href="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp?action=confirmRemove${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
+            <a href="jsp/admin/plugins/${plugin_name}/Manage${business_class.pluralBusinessClass}.jsp?action=confirmRemove${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
                class="btn btn-danger btn-sm" title="${i18n_open}portal.util.labelDelete${i18n_close}" >
                 <i class="fa fa-trash"></i>
             </a>
