--- a/webapp/WEB-INF/templates/generators/default/html/gt_html_admin_v6.html
+++ b/webapp/WEB-INF/templates/generators/default/html/gt_html_admin_v6.html
@@ -6,7 +6,7 @@
 <${macro}box>
 	<${macro}boxHeader title='${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.title${i18n_close}' />
 	<${macro}boxBody>
-    <${macro}tform name='create_${business_class.businessClass?lower_case}' action='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp'>
+    <${macro}tform name='create_${business_class.businessClass?lower_case}' action='jsp/admin/plugins/${pluginPath}/Manage${business_class.pluralBusinessClass}.jsp'>
 
         <${macro}messages errors=errors />
         <input type="hidden" id="id" name="id"/>
@@ -37,7 +37,7 @@
 <${macro}box>
 	<${macro}boxHeader title='${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.title${i18n_close}' />
 	<${macro}boxBody>
-    <${macro}tform class="form-horizontal" method="post" name="modify_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp">
+    <${macro}tform class="form-horizontal" method="post" name="modify_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${pluginPath}/Manage${business_class.pluralBusinessClass}.jsp">
 			<${macro}messages errors=errors />
 			<input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
 			<input type="hidden" value="${bra_open}token${bra_close}" name="token" />
@@ -65,8 +65,8 @@
 
 <${macro}box>
 	<${macro}boxHeader title='${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}.title${i18n_close}' boxTools=true>
-		<${macro}tform class='form-inline pull-right' name='manage_${business_class.businessClass?lower_case}' action='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp'>
-			<${macro}button type='submit' name='view_create${business_class.businessClass}' buttonIcon='plus' title='${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.buttonAdd${i18n_close}' />
+		<${macro}tform class='form-inline pull-right' name='manage_${business_class.businessClass?lower_case}' action='jsp/admin/plugins/${pluginPath}/Manage${business_class.pluralBusinessClass}.jsp'>
+			<${macro}button type='submit' name='view_create${business_class.businessClass}' buttonIcon='plus' title='${i18n_open}${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.buttonAdd${i18n_close}' />
 		</${macro}tform>
 	</${macro}boxHeader>
 	<${macro}boxBody>    
@@ -77,7 +77,7 @@
         <tr>
             <input type="hidden" id="id" name="id"/>
             <#list business_class.attributes as attribute>
-            <th>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}</th>
+            <th>${i18n_open}${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.column${attribute.name}${i18n_close}</th>
             </#list>
             <th>${i18n_open}portal.util.labelActions${i18n_close}</th>
         </tr>
@@ -93,9 +93,9 @@
 							</#if>
         </#list>
         <td>
-			<${macro}aButton href='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp?view=modify${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}' title='${i18n_open}portal.util.labelModify${i18n_close}' buttonIcon='pencil' showTitle=false />
+			<${macro}aButton href='jsp/admin/plugins/${pluginPath}/Manage${business_class.pluralBusinessClass}.jsp?view=modify${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}' title='${i18n_open}portal.util.labelModify${i18n_close}' buttonIcon='pencil' showTitle=false />
 						
-			<${macro}aButton href='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp?action=confirmRemove${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}' title='${i18n_open}portal.util.labelDelete${i18n_close}' buttonIcon='trash' color='btn-danger' showTitle=false />
+			<${macro}aButton href='jsp/admin/plugins/${pluginPath}/Manage${business_class.pluralBusinessClass}.jsp?action=confirmRemove${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}' title='${i18n_open}portal.util.labelDelete${i18n_close}' buttonIcon='trash' color='btn-danger' showTitle=false />
 
         </td>
         </tr>
