--- a/webapp/WEB-INF/templates/generators/default/html/gt_html_xpage_v5.html
+++ b/webapp/WEB-INF/templates/generators/default/html/gt_html_xpage_v5.html
@@ -30,7 +30,7 @@
                     <button name="action_create${business_class.businessClass}" class="btn btn-primary" type="submit" tabindex="${business_class.attributes?size}">
                         ${i18n_open}portal.util.labelCreate${i18n_close}
                     </button>
-                    <button name="view_manage${business_class.businessClass}s" class="btn" type="submit" >
+                    <button name="view_manage${business_class.pluralBusinessClass}" class="btn" type="submit" >
                         ${i18n_open}portal.util.labelCancel${i18n_close}
                     </button>
                 </div>
@@ -70,7 +70,7 @@
                     <button name="action_modify${business_class.businessClass}" class="btn btn-primary" type="submit" tabindex="${business_class.attributes?size}" >
                         ${i18n_open}portal.util.labelModify${i18n_close}
                     </button>
-                    <button name="view_manage${business_class.businessClass}s" class="btn" type="submit" >
+                    <button name="view_manage${business_class.pluralBusinessClass}" class="btn" type="submit" >
                         ${i18n_open}portal.util.labelCancel${i18n_close}
                     </button>	
                 </div>
@@ -95,17 +95,17 @@
         <form method="post"  action="jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}">
             <button name="view_create${business_class.businessClass}" class="btn btn-primary pull-right" type="submit">
                 <span class="fa fa-plus"></span>
-                ${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.buttonAdd${i18n_close}
+                ${i18n_open}${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.buttonAdd${i18n_close}
             </button>
         </form>
 
-    <h4>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.title{i18n_close}</h4>
+    <h4>${i18n_open}${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.title{i18n_close}</h4>
         
     <table class="table table-condensed table-striped">
         <tr>
             <input type="hidden" id="id" name="id"/>
             <#list business_class.attributes as attribute>
-            <th>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}</th>
+            <th>${i18n_open}${plugin_name}.manage_${business_class.pluralBusinessClass?lower_case}.column${attribute.name}${i18n_close}</th>
             </#list>
             <th>${i18n_open}portal.util.labelActions${i18n_close}</th>
         </tr>
