--- a/webapp/WEB-INF/templates/generators/default/jspbean/gt_jspbean_v6.html
+++ b/webapp/WEB-INF/templates/generators/default/jspbean/gt_jspbean_v6.html
@@ -59,11 +59,11 @@ import javax.servlet.http.HttpServletRequest;
 /**
  * This class provides the user interface to manage ${business_class.businessClass} features ( manage, create, modify, remove )
  */
-@Controller( controllerJsp = "Manage${business_class.businessClass}s.jsp", controllerPath = "jsp/admin/plugins/${radicalPackage?replace(".","/")}/", right = "${feature_right}" )
+@Controller( controllerJsp = "Manage${business_class.pluralBusinessClass}.jsp", controllerPath = "jsp/admin/plugins/${radicalPackage?replace(".","/")}/", right = "${feature_right}" )
 public class ${business_class.businessClass}JspBean extends Abstract${feature_name}JspBean
 {
     // Templates
-    private static final String TEMPLATE_MANAGE_${business_class.businessClass?upper_case}S = "/admin/plugins/${radicalPackage?replace(".","/")}/manage_${business_class.businessClass?lower_case}s.html";
+    private static final String TEMPLATE_MANAGE_${business_class.pluralBusinessClass?upper_case} = "/admin/plugins/${radicalPackage?replace(".","/")}/manage_${business_class.pluralBusinessClass?lower_case}.html";
     private static final String TEMPLATE_CREATE_${business_class.businessClass?upper_case} = "/admin/plugins/${radicalPackage?replace(".","/")}/create_${business_class.businessClass?lower_case}.html";
     private static final String TEMPLATE_MODIFY_${business_class.businessClass?upper_case} = "/admin/plugins/${radicalPackage?replace(".","/")}/modify_${business_class.businessClass?lower_case}.html";
 
@@ -71,7 +71,7 @@ public class ${business_class.businessClass}JspBean extends Abstract${feature_na
     private static final String PARAMETER_ID_${business_class.businessClass?upper_case} = "id";
 
     // Properties for page titles
-    private static final String PROPERTY_PAGE_TITLE_MANAGE_${business_class.businessClass?upper_case}S = "${msg?lower_case}.manage_${business_class.businessClass?lower_case}s.pageTitle";
+    private static final String PROPERTY_PAGE_TITLE_MANAGE_${business_class.pluralBusinessClass?upper_case} = "${msg?lower_case}.manage_${business_class.pluralBusinessClass?lower_case}.pageTitle";
     private static final String PROPERTY_PAGE_TITLE_MODIFY_${business_class.businessClass?upper_case} = "${msg?lower_case}.modify_${business_class.businessClass?lower_case}.pageTitle";
     private static final String PROPERTY_PAGE_TITLE_CREATE_${business_class.businessClass?upper_case} = "${msg?lower_case}.create_${business_class.businessClass?lower_case}.pageTitle";
 
@@ -79,7 +79,7 @@ public class ${business_class.businessClass}JspBean extends Abstract${feature_na
     private static final String MARK_${business_class.businessClass?upper_case}_LIST = "${business_class.businessClass?lower_case}_list";
     private static final String MARK_${business_class.businessClass?upper_case} = "${business_class.businessClass?lower_case}";
 
-    private static final String JSP_MANAGE_${business_class.businessClass?upper_case}S = "jsp/admin/plugins/${radicalPackage?replace(".","/")}/Manage${business_class.businessClass?cap_first}s.jsp";
+    private static final String JSP_MANAGE_${business_class.pluralBusinessClass?upper_case} = "jsp/admin/plugins/${radicalPackage?replace(".","/")}/Manage${business_class.pluralBusinessClass?cap_first}.jsp";
 
     // Properties
     private static final String MESSAGE_CONFIRM_REMOVE_${business_class.businessClass?upper_case} = "${msg}.message.confirmRemove${business_class.businessClass?cap_first}";
@@ -88,7 +88,7 @@ public class ${business_class.businessClass}JspBean extends Abstract${feature_na
     private static final String VALIDATION_ATTRIBUTES_PREFIX = "${msg}.model.entity.${business_class.businessClass?lower_case}.attribute.";
 
     // Views
-    private static final String VIEW_MANAGE_${business_class.businessClass?upper_case}S = "manage${business_class.businessClass}s";
+    private static final String VIEW_MANAGE_${business_class.pluralBusinessClass?upper_case} = "manage${business_class.pluralBusinessClass}";
     private static final String VIEW_CREATE_${business_class.businessClass?upper_case} = "create${business_class.businessClass}";
     private static final String VIEW_MODIFY_${business_class.businessClass?upper_case} = "modify${business_class.businessClass}";
 
@@ -111,14 +111,14 @@ public class ${business_class.businessClass}JspBean extends Abstract${feature_na
      * @param request The HTTP request
      * @return The page
      */
-    @View( value = VIEW_MANAGE_${business_class.businessClass?upper_case}S, defaultView = true )
-    public String getManage${business_class.businessClass}s( HttpServletRequest request )
+    @View( value = VIEW_MANAGE_${business_class.pluralBusinessClass?upper_case}, defaultView = true )
+    public String getManage${business_class.pluralBusinessClass}( HttpServletRequest request )
     {
         _${business_class.businessClass?lower_case} = null;
-        List<${business_class.businessClass}> list${business_class.businessClass}s = ${business_class.businessClass}Home.get${business_class.businessClass}sList(  );
-        Map<String, Object> model = getPaginatedListModel( request, MARK_${business_class.businessClass?upper_case}_LIST, list${business_class.businessClass}s, JSP_MANAGE_${business_class.businessClass?upper_case}S );
+        List<${business_class.businessClass}> list${business_class.pluralBusinessClass} = ${business_class.businessClass}Home.get${business_class.pluralBusinessClass}List(  );
+        Map<String, Object> model = getPaginatedListModel( request, MARK_${business_class.businessClass?upper_case}_LIST, list${business_class.pluralBusinessClass}, JSP_MANAGE_${business_class.pluralBusinessClass?upper_case} );
 
-        return getPage( PROPERTY_PAGE_TITLE_MANAGE_${business_class.businessClass?upper_case}S, TEMPLATE_MANAGE_${business_class.businessClass?upper_case}S, model );
+        return getPage( PROPERTY_PAGE_TITLE_MANAGE_${business_class.pluralBusinessClass?upper_case}, TEMPLATE_MANAGE_${business_class.pluralBusinessClass?upper_case}, model );
     }
 
     /**
@@ -165,7 +165,7 @@ public class ${business_class.businessClass}JspBean extends Abstract${feature_na
         ${business_class.businessClass}Home.create( _${business_class.businessClass?lower_case} );
         addInfo( INFO_${business_class.businessClass?upper_case}_CREATED, getLocale(  ) );
 
-        return redirectView( request, VIEW_MANAGE_${business_class.businessClass?upper_case}S );
+        return redirectView( request, VIEW_MANAGE_${business_class.pluralBusinessClass?upper_case} );
     }
 
     /**
@@ -191,7 +191,7 @@ public class ${business_class.businessClass}JspBean extends Abstract${feature_na
      * Handles the removal form of a ${business_class.businessClass?lower_case}
      *
      * @param request The Http request
-     * @return the jsp URL to display the form to manage ${business_class.businessClass?lower_case}s
+     * @return the jsp URL to display the form to manage ${business_class.pluralBusinessClass?lower_case}
      */
     @Action( ACTION_REMOVE_${business_class.businessClass?upper_case} )
     public String doRemove${business_class.businessClass}( HttpServletRequest request )
@@ -200,7 +200,7 @@ public class ${business_class.businessClass}JspBean extends Abstract${feature_na
         ${business_class.businessClass}Home.remove( nId );
         addInfo( INFO_${business_class.businessClass?upper_case}_REMOVED, getLocale(  ) );
 
-        return redirectView( request, VIEW_MANAGE_${business_class.businessClass?upper_case}S );
+        return redirectView( request, VIEW_MANAGE_${business_class.pluralBusinessClass?upper_case} );
     }
 
     /**
@@ -252,6 +252,6 @@ public class ${business_class.businessClass}JspBean extends Abstract${feature_na
         ${business_class.businessClass}Home.update( _${business_class.businessClass?lower_case} );
         addInfo( INFO_${business_class.businessClass?upper_case}_UPDATED, getLocale(  ) );
 
-        return redirectView( request, VIEW_MANAGE_${business_class.businessClass?upper_case}S );
+        return redirectView( request, VIEW_MANAGE_${business_class.pluralBusinessClass?upper_case} );
     }
 }
