--- a/webapp/WEB-INF/templates/generators/default/rest/gt_rest.html
+++ b/webapp/WEB-INF/templates/generators/default/rest/gt_rest.html
@@ -106,16 +106,16 @@ public class ${business_class.businessClass?cap_first}Rest
      */
     private Response get${business_class.businessClass?cap_first}ListV1( )
     {
-        List<${business_class.businessClass?cap_first}> list${business_class.businessClass?cap_first}s = ${business_class.businessClass?cap_first}Home.get${business_class.businessClass?cap_first}sList( );
+        List<${business_class.businessClass?cap_first}> list${business_class.pluralBusinessClass?cap_first} = ${business_class.businessClass?cap_first}Home.get${business_class.pluralBusinessClass?cap_first}List( );
         
-        if ( list${business_class.businessClass?cap_first}s.isEmpty( ) )
+        if ( list${business_class.pluralBusinessClass?cap_first}.isEmpty( ) )
         {
             return Response.status( Response.Status.NO_CONTENT )
                 .entity( JsonUtil.buildJsonResponse( new JsonResponse( Constants.EMPTY_OBJECT ) ) )
                 .build( );
         }
         return Response.status( Response.Status.OK )
-                .entity( JsonUtil.buildJsonResponse( new JsonResponse( list${business_class.businessClass?cap_first}s ) ) )
+                .entity( JsonUtil.buildJsonResponse( new JsonResponse( list${business_class.pluralBusinessClass?cap_first} ) ) )
                 .build( );
     }
     
